--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
   --navy: #17050F;
   --blue: #082840;
   --white: #fff;
+  --black: #000;
 }
 
 /* Global stylesheet */
@@ -268,4 +269,21 @@ a[href].direct-link:focus:visited,
 :hover > a[href].direct-link,
 :hover > a[href].direct-link:visited {
   color: #aaa;
+}
+
+@media (prefers-color-scheme: dark) {
+  html,body {
+    background-color: var(--black);
+    color: var(--lightgray);
+  }
+  .postlist-date,
+  .postlist-item:before {
+    color: var(--lightgray);
+  }
+  a[href] {
+    color: var(--white);
+  }
+  a[href]:visited {
+    color: var(--lightgray);
+  }
 }
