--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -23,3 +23,11 @@ templateClass: tmpl-post
 </ul>
 {%- endif %}
 {%- endif %}
+
+<script src="https://utteranc.es/client.js"
+        repo="danjac/blog"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
