--- a/css/index.css
+++ b/css/index.css
@@ -112,6 +112,13 @@ pre {
 code {
   word-break: break-all;
 }
+
+blockquote {
+  border-left: 5px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+}
+
 .highlight-line {
   display: block;
   padding: 0.125em 1em;
