--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -26,7 +26,9 @@
       {{ content | safe }}
     </main>
 
-    <footer></footer>
+    <footer>
+      Find me on Mastodon <a rel="me" href="https://masto.ai/@danjac">@danjac</a>
+    </footer>
 
     <!-- Current page: {{ page.url | url }} -->
   </body>
