--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
 /* Colors */
 :root {
   --lightgray: #e0e0e0;
-  --gray: #C0C0C0;
+  --gray: #c0c0c0;
   --darkgray: #333;
-  --navy: #17050F;
+  --navy: #17050f;
   --blue: #082840;
   --white: #fff;
   --black: #000;
@@ -41,12 +41,11 @@ body {
 }
 
 @media (min-width: 741px) {
-  body, img {
+  body,
+  img {
     max-width: 54em; /* 600px /16 */
   }
 }
-
-
 
 p:last-child {
   margin-bottom: 0;
@@ -56,7 +55,6 @@ p,
 .tmpl-post li {
   line-height: 1.45;
 }
-
 
 a[href] {
   color: var(--blue);
@@ -87,7 +85,10 @@ table th {
 
 pre,
 code {
-  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono",
+    "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
+    "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L",
+    "Courier New", Courier, monospace;
   line-height: 1.5;
 }
 pre {
@@ -106,7 +107,7 @@ pre {
   -ms-hyphens: none;
   hyphens: none;
   padding: 1em;
-  margin: .5em 0;
+  margin: 0.5em 0;
   background-color: #f6f6f6;
 }
 code {
@@ -141,7 +142,7 @@ blockquote {
 }
 .highlight-line-active {
   background-color: #444;
-  background-color: hsla(0, 0%, 27%, .8);
+  background-color: hsla(0, 0%, 27%, 0.8);
 }
 .highlight-line-add {
   background-color: #45844b;
@@ -207,8 +208,8 @@ blockquote {
   word-spacing: -0.5px;
 }
 .postlist-link {
-  padding-left: .25em;
-  padding-right: .25em;
+  padding-left: 0.25em;
+  padding-right: 0.25em;
   text-underline-position: from-font;
   text-underline-offset: 0;
   text-decoration-thickness: 1px;
@@ -220,7 +221,6 @@ blockquote {
   font-size: 1.1875em; /* 19px /16 */
   font-weight: 700;
 }
-
 
 /* Tags */
 .post-tag {
@@ -265,7 +265,7 @@ a[href].post-tag:focus {
   font-family: sans-serif;
   text-decoration: none;
   font-style: normal;
-  margin-left: .1em;
+  margin-left: 0.1em;
 }
 a[href].direct-link,
 a[href].direct-link:visited {
@@ -276,4 +276,24 @@ a[href].direct-link:focus:visited,
 :hover > a[href].direct-link,
 :hover > a[href].direct-link:visited {
   color: #aaa;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    background-color: var(--darkgray);
+  }
+  body {
+    color: var(--white);
+    background-color: var(--darkgray);
+  }
+  a[href] {
+    color: var(--lightblue);
+  }
+  a[href]:visited {
+    color: var(--lightgray);
+  }
+
+  pre {
+    background-color: #505050;
+  }
 }
