--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,6 +9,7 @@
   <meta name="keywords" content="{{ tags or metadata.keywords }}">
   <meta name="robots" content="index, follow" />
   <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
+  <link rel="stylesheet" href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css">
   <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
   <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
 </head>
