--- a/archive.njk
+++ b/archive.njk
@@ -2,11 +2,11 @@
 layout: layouts/home.njk
 permalink: /posts/
 eleventyNavigation:
-  key: Archive
+  key: Arĥivo
   order: 2
 ---
 
-<h1>Archive</h1>
+<h1>Arĥivo</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
