--- a/index.njk
+++ b/index.njk
@@ -1,10 +1,11 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
-  key: Home
+  key: Hejmo
   order: 1
 ---
 {% set maxPosts = collections.posts.length | min(12) %}
+{% if maxPosts -%}
 <h1>Latest {% if maxPosts == 1 %}Post{% else %}{{ maxPosts }} Posts{% endif %}</h1>
 
 {% set postslist = collections.posts | head(-12) %}
@@ -12,3 +13,4 @@ eleventyNavigation:
 {% include "postslist.njk" %}
 
 <p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
+{%- endif %}
