--- a/index.njk
+++ b/index.njk
@@ -6,11 +6,11 @@ eleventyNavigation:
 ---
 {% set maxPosts = collections.posts.length | min(12) %}
 {% if maxPosts -%}
-<h1>Latest {% if maxPosts == 1 %}Post{% else %}{{ maxPosts }} Posts{% endif %}</h1>
+<h1>Plej {% if maxPosts == 1 %}Nova Artikolo{% else %}{{ maxPosts }}Novaj Artikoloj{% endif %}</h1>
 
 {% set postslist = collections.posts | head(-12) %}
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
-<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
+<p>Ĉiuj artikoloj troviĝas en <a href="{{ '/posts/' | url }}">la arĥivo</a>.</p>
 {%- endif %}
