--- a/css/index.css
+++ b/css/index.css
@@ -278,6 +278,20 @@ a[href].direct-link:focus:visited,
   color: #aaa;
 }
 
+figure.image {
+  margin: 1px 0;
+  padding: 1px 0;
+  & img {
+    object-fit: scale-down;
+    padding-bottom: 1px;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  & figcaption {
+    font-style: italic;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     background-color: var(--darkgray);
