--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  padding-bottom: 1rem;
   font-family: -apple-system, system-ui, sans-serif;
   color: var(--darkgray);
   background-color: var(--white);
