--- a/_includes/image.njk
+++ b/_includes/image.njk
@@ -1,19 +1,15 @@
-{% macro figure(url, description, width, height, source='', attribution='', wrap=false) %}
-<figure class="image{% if wrap %} wrap{% endif %}">
+{% macro figure(url, description, width, height, source='', attribution='', class='') %}
+<figure class="image{% if class %} {{ class }}{% endif %}">
   <img src="{{ url }}"
        alt="{{ description }}"
        loading="lazy"
        width="{{ width }}"
        height="{{ height }}">
   <figcaption>
-      <div>
       {{ description }}
-      </div>
-      <div>
       {% if source != '' and attibution != '' -%}
       Fonto: <a href="{{ source }}">{{ attribution }}</a>
       {%- endif %}
-      </div>
   </figcaption>
 </figure>
 {%- endmacro %}
