--- a/_includes/image.njk
+++ b/_includes/image.njk
@@ -1,4 +1,4 @@
-{% macro figure(url, description, width, height, source='', attribution='', class='') %}
+{% macro figure(url, description, width, height, source='', attribution='', class='') -%}
 <figure class="image{% if class %} {{ class }}{% endif %}">
   <img src="{{ url }}"
        alt="{{ description }}"
@@ -8,7 +8,7 @@
   <figcaption>
       {{ description }}
       {% if source != '' and attibution != '' -%}
-      Fonto: <a href="{{ source }}">{{ attribution }}</a>
+      <strong>Fonto:</strong> <a href="{{ source }}">{{ attribution }}</a>
       {%- endif %}
   </figcaption>
 </figure>
