--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,8 +1,18 @@
-<ol reversed class="postlist" style="counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }}">
-{% for post in postslist | reverse %}
+{% macro postslist(posts, limit=0, summarize=false) -%}
+<ol reversed class="postlist" style="counter-reset: start-from {{ (limit or posts.length) + 1 }}">
+{% for post in posts | reverse %}
   <li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
+    <p class="postlist-title">
     <a href="{{ post.url | url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
     <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
+    {% if summarize -%}
+    </p>
+    <p class="postlist-description">
+    {{ post.data.description }}
+    </p>
+    {%- endif %}
   </li>
+
 {% endfor %}
 </ol>
+{%- endmacro %}
