--- a/index.njk
+++ b/index.njk
@@ -4,13 +4,13 @@ eleventyNavigation:
   key: Hejmo
   order: 1
 ---
+{% import "postslist.njk" as postslist %}
+
 {% set maxPosts = collections.posts.length | min(12) %}
 {% if maxPosts -%}
 <h1>{% if maxPosts == 1 %}Nova Artikolo{% else %}Novaj Artikoloj{% endif %}</h1>
 
-{% set postslist = collections.posts | head(-12) %}
-{% set postslistCounter = collections.posts | length %}
-{% include "postslist.njk" %}
+{{ postslist.postslist(collections.posts | head(-12), collections.posts | length, summarize=true)}}
 
 <p>Ĉiuj artikoloj troviĝas en <a href="{{ '/posts/' | url }}">la arĥivo</a>.</p>
 {%- endif %}
